add background image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+<body>
+  <div class="background">
+      <img className="img" src="images/password.jpg" alt="full wine glasses" style="height:100vh">
+  </div>
+
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
