adjust background height

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <div class="background">
-      <img className="img" src="images/password.jpg" alt="full wine glasses" style="height:100vh">
+      <img className="img" src="images/password.jpg" alt="full wine glasses" >
   </div>
 
     <div class="wrapper">
